--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,18 +14,26 @@
 		"comma-spacing": "error",
 		"comma-style": "error",
 		"curly": ["error", "multi-line", "consistent"],
+		"default-case-last": "error",
+		"default-param-last": "error",
 		"dot-location": ["error", "property"],
 		"handle-callback-err": "off",
 		"indent": ["error", "tab", { "SwitchCase": 1 }],
 		"max-nested-callbacks": ["error", { "max": 4 }],
 		"max-statements-per-line": ["error", { "max": 4 }],
 		"no-console": "off",
+		"no-confusing-arrow": "error",
+		"no-else-return": "error",
 		"no-empty-function": "error",
 		"no-floating-decimal": "error",
+		"no-lonely-if": "error",
 		"no-multi-spaces": "error",
 		"no-multiple-empty-lines": ["error", { "max": 3, "maxEOF": 1, "maxBOF": 0 }],
+		"no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
 		"no-trailing-spaces": ["error"],
+		"no-unneeded-ternary": "error",
 		"no-unused-vars": "off",
+		"no-use-before-define": ["error", { "functions": true, "classes": true, "variables": true }],
 		"no-var": "error",
 		"object-curly-spacing": ["error", "always"],
 		"prefer-const": "error",
@@ -34,8 +42,6 @@
 		"space-infix-ops": "error",
 		"space-unary-ops": "error",
 		"spaced-comment": "error",
-		"no-lonely-if": "error",
-		"no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
 		"space-before-blocks": ["error", { "functions": "never", "keywords": "never", "classes": "always" }],
 		"space-before-function-paren": ["error", { "anonymous": "never","named": "never", "asyncArrow": "always" }],
 		"keyword-spacing": ["error", {
