--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,39 +1,34 @@
 {
+	"root": true,
+	"parser": "@typescript-eslint/parser",
 	"extends": "eslint:recommended",
 	"env": {
-		"node": true,
-		"es6": true
-	},
+        "es2022": true,
+        "node": true
+    },
 	"parserOptions": {
-		"ecmaVersion": 2017
-	},
+        "ecmaVersion": 14,
+        "sourceType": "module"
+    },
 	"rules": {
-		"brace-style": ["error", "1tbs", { "allowSingleLine": true }],
+		"brace-style": ["error", "1tbs", { "allowSingleLine": false }],
 		"use-isnan": "error",
 		"comma-dangle": ["error", "never"],
 		"comma-spacing": "error",
 		"comma-style": "error",
 		"curly": ["error", "multi-line", "consistent"],
-		"default-case-last": "error",
-		"default-param-last": "error",
 		"dot-location": ["error", "property"],
 		"handle-callback-err": "off",
 		"indent": ["error", "tab", { "SwitchCase": 1 }],
 		"max-nested-callbacks": ["error", { "max": 4 }],
 		"max-statements-per-line": ["error", { "max": 4 }],
-		"no-console": "off",
-		"no-confusing-arrow": "error",
-		"no-else-return": "error",
+		"no-console": "warn",
 		"no-empty-function": "error",
 		"no-floating-decimal": "error",
-		"no-lonely-if": "error",
 		"no-multi-spaces": "error",
 		"no-multiple-empty-lines": ["error", { "max": 3, "maxEOF": 1, "maxBOF": 0 }],
-		"no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
 		"no-trailing-spaces": ["error"],
-		"no-unneeded-ternary": "error",
 		"no-unused-vars": "off",
-		"no-use-before-define": ["error", { "functions": true, "classes": true, "variables": true }],
 		"no-var": "error",
 		"object-curly-spacing": ["error", "always"],
 		"prefer-const": "error",
@@ -42,7 +37,9 @@
 		"space-infix-ops": "error",
 		"space-unary-ops": "error",
 		"spaced-comment": "error",
-		"space-before-blocks": ["error", { "functions": "never", "keywords": "never", "classes": "always" }],
+		"no-lonely-if": "error",
+		"no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
+		"space-before-blocks": ["error", { "functions": "always", "keywords": "never", "classes": "always" }],
 		"space-before-function-paren": ["error", { "anonymous": "never","named": "never", "asyncArrow": "always" }],
 		"keyword-spacing": ["error", {
 			"before": true,
@@ -56,5 +53,6 @@
 		}],
 		"yoda": "error"
 	},
+	
 	"globals": {}
 }
