--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
 		"url": "https://github.com/Multarix/baseConversions/issues"
 	},
 	"homepage": "https://projects.multarix.com/base-conversions",
-	"main": "dist/main.js",
-	"types": "dist/main.d.ts",
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
 	"devDependencies": {
 		"@types/node": "^20.1.0",
 		"@typescript-eslint/eslint-plugin": "^5.59.2",
